--- a/src/app/pages/students/add-student-details/add-student-details.component.html
+++ b/src/app/pages/students/add-student-details/add-student-details.component.html
@@ -20,14 +20,14 @@
                 <h6 class="h6 font-weight-bold sub-heading">Previous Institution Information</h6>
               </div>
 
-              <div class="col-sm-3 pr-4 pl-4">
+              <!-- <div class="col-sm-3 pr-4 pl-4">
                 <mat-form-field class="example-full-width">
                   <mat-select placeholder="Region" name="region" formControlName="region">
                     <mat-option value="urban">Urban</mat-option>
                     <mat-option value="rural">Rural</mat-option>
                   </mat-select>
                 </mat-form-field>
-              </div>
+              </div> -->
 
               <div class="col-sm-3 pr-4 pl-4">
                 <mat-form-field class="example-full-width">
