--- a/src/app/pages/students/add-student/add-student.component.html
+++ b/src/app/pages/students/add-student/add-student.component.html
@@ -22,40 +22,50 @@
               </div>
 
 
-              <div class="col-sm-3">
+              <div class="col-sm-3 requiredField">
                 <mat-form-field class="example-full-width">
-                  <input matInput placeholder="First Name" type="text" name="firstName" formControlName="firstName">
+                  <input matInput placeholder="First Name *" type="text" name="firstName" formControlName="firstName" (change)="onChangePreference()">
+                  <!-- <mat-hint class="requiredText">Field is required!</mat-hint> -->
+                  <mat-error *ngIf="firstName.hasError('required')">
+                    Field is required.
+                  </mat-error>
                 </mat-form-field>
               </div>
 
               <div class="col-sm-3">
                 <mat-form-field class="example-full-width">
-                  <input matInput placeholder="Middle Name" type="text" name="middleName" formControlName="middleName">
+                  <input matInput placeholder="Middle Name" type="text" name="middleName" formControlName="middleName" (change)="onChangePreference()">
                 </mat-form-field>
               </div>
 
               <div class="col-sm-3">
                 <mat-form-field class="example-full-width">
-                  <input matInput placeholder="Last Name" type="text" name="lastName" formControlName="lastName">
+                  <input matInput placeholder="Last Name *" type="text" name="lastName" formControlName="lastName" (change)="onChangePreference()">
+                  <mat-error *ngIf="lastName.hasError('required')">
+                    Field is required.
+                  </mat-error>
+                </mat-form-field>                
+              </div>
+
+              <div class="col-sm-3">
+                <mat-form-field class="example-full-width">
+                  <input matInput placeholder="Aadhar Number *" type="number" name="aadharNo" formControlName="aadharNo" (change)="onChangePreference()">
+                  <mat-error *ngIf="aadharNo.hasError('required')">
+                    Field is required.
+                  </mat-error>
                 </mat-form-field>
               </div>
 
               <div class="col-sm-3">
                 <mat-form-field class="example-full-width">
-                  <input matInput placeholder="Aadhar Number" type="number" name="aadharNo" formControlName="aadharNo">
+                  <input matInput placeholder="Contact Number" type="number" name="mobileNo" formControlName="mobileNo" (change)="onChangePreference()">
                 </mat-form-field>
               </div>
 
               <div class="col-sm-3">
                 <mat-form-field class="example-full-width">
-                  <input matInput placeholder="Contact Number" type="number" name="mobileNo" formControlName="mobileNo">
-                </mat-form-field>
-              </div>
-
-              <div class="col-sm-3">
-                <mat-form-field class="example-full-width">
-                  <input matInput [matDatepicker]="dateOfBirth" placeholder="Date of Birth" name="date_of_birth"
-                    formControlName="date_of_birth">
+                  <input matInput [matDatepicker]="dateOfBirth" placeholder="Date of Birth *" name="date_of_birth" formControlName="date_of_birth" (change)="onChangePreference()">
+                  <mat-error *ngIf="date_of_birth.hasError('required')">Field is required.</mat-error>
                   <mat-datepicker-toggle matSuffix [for]="dateOfBirth"></mat-datepicker-toggle>
                   <mat-datepicker #dateOfBirth></mat-datepicker>
                 </mat-form-field>
@@ -63,7 +73,7 @@
 
               <div class="col-sm-3">
                 <mat-form-field class="example-full-width">
-                  <mat-select placeholder="Blood Group" name="bloodGroup" formControlName="bloodGroup">
+                  <mat-select placeholder="Blood Group" name="bloodGroup" formControlName="bloodGroup" (change)="onChangePreference()">
                     <mat-option value="b+">B+</mat-option>
                     <mat-option value="o+">O+</mat-option>
                   </mat-select>
@@ -72,27 +82,28 @@
 
               <div class="col-sm-3">
                 <mat-form-field class="example-full-width">
-                  <mat-select placeholder="Gender" name="gender" formControlName="gender">
+                  <mat-select placeholder="Gender *" name="gender" formControlName="gender" (change)="onChangePreference()">
                     <mat-option value="male">Male</mat-option>
                     <mat-option value="female">Female</mat-option>
                   </mat-select>
+                  <mat-error *ngIf="gender.hasError('required')">Field is required.</mat-error>
                 </mat-form-field>
               </div>
 
               <div class="col-sm-3">
                 <mat-form-field class="example-full-width">
-                  <mat-select placeholder="Contact Preference" name="preference" formControlName="preference"
-                    [(ngModel)]="prefer" (change)="onChangePreference()">
+                  <mat-select placeholder="Contact Preference *" name="preference" formControlName="preference" [(ngModel)]="prefer" (change)="onChangePreference()">
                     <mat-option value="father">Father</mat-option>
                     <mat-option value="mother">Mother</mat-option>
                     <mat-option value="guardian">Guardian</mat-option>
                   </mat-select>
+                  <mat-error *ngIf="preference.hasError('required')">Field is required.</mat-error>
                 </mat-form-field>
               </div>
 
               <div class="col-sm-3">
                 <mat-form-field class="example-full-width">
-                  <mat-select placeholder="Religion" name="religion" formControlName="religion">
+                  <mat-select placeholder="Religion" name="religion" formControlName="religion" (change)="onChangePreference()">
                     <mat-option value="hindu">Hindu</mat-option>
                     <mat-option value="muslim">Muslim</mat-option>
                     <mat-option value="christian">Christian</mat-option>
@@ -106,7 +117,7 @@
 
               <div class="col-sm-3">
                 <mat-form-field class="example-full-width">
-                  <mat-select placeholder="Caste" name="caste" formControlName="caste">
+                  <mat-select placeholder="Caste" name="caste" formControlName="caste" (change)="onChangePreference()">
                     <mat-option value="general">General</mat-option>
                     <mat-option value="sc">SC</mat-option>
                     <mat-option value="st">ST</mat-option>
@@ -117,7 +128,7 @@
 
               <div class="col-sm-3">
                 <mat-form-field class="example-full-width">
-                  <mat-select placeholder="Indian" name="nationality" formControlName="nationality">
+                  <mat-select placeholder="Indian" name="nationality" formControlName="nationality" (change)="onChangePreference()">
                     <mat-option value="indian">Indian</mat-option>
                   </mat-select>
                 </mat-form-field>
@@ -192,76 +203,76 @@
 
               <div class="col-sm-3">
                 <mat-form-field class="example-full-width">
-                  <input matInput placeholder="Father's First Name" type="text" name="fatherFName" formControlName="fatherFName">
+                  <input matInput placeholder="Father's First Name" type="text" name="fatherFName" formControlName="fatherFName" (change)="onChangePreference()">
                 </mat-form-field>
               </div>
 
               <div class="col-sm-3">
                 <mat-form-field class="example-full-width">
-                  <input matInput placeholder="Father's Middle Name" type="text" name="fatherMName" formControlName="fatherMName">
+                  <input matInput placeholder="Father's Middle Name" type="text" name="fatherMName" formControlName="fatherMName" (change)="onChangePreference()">
                 </mat-form-field>
               </div>
 
               <div class="col-sm-3">
                 <mat-form-field class="example-full-width">
-                  <input matInput placeholder="Father's Last Name" type="text" name="fatherLName" formControlName="fatherLName">
+                  <input matInput placeholder="Father's Last Name" type="text" name="fatherLName" formControlName="fatherLName" (change)="onChangePreference()">
                 </mat-form-field>
               </div>
 
               <div class="col-sm-3">
                 <mat-form-field class="example-full-width">
-                  <input matInput placeholder="Mother's First Name" type="text" name="motherFName" formControlName="motherFName">
+                  <input matInput placeholder="Mother's First Name" type="text" name="motherFName" formControlName="motherFName" (change)="onChangePreference()">
                 </mat-form-field>
               </div>
 
               <div class="col-sm-3">
                 <mat-form-field class="example-full-width">
-                  <input matInput placeholder="Mother's Middle Name" type="text" name="motherMName" formControlName="motherMName">
+                  <input matInput placeholder="Mother's Middle Name" type="text" name="motherMName" formControlName="motherMName" (change)="onChangePreference()">
                 </mat-form-field>
               </div>
 
               <div class="col-sm-3">
                 <mat-form-field class="example-full-width">
-                  <input matInput placeholder="Mother's Last Name" type="text" name="motherLName" formControlName="motherLName">
+                  <input matInput placeholder="Mother's Last Name" type="text" name="motherLName" formControlName="motherLName" (change)="onChangePreference()">
                 </mat-form-field>
               </div>
 
               <div class="col-sm-3">
                 <mat-form-field class="example-full-width">
-                  <input matInput placeholder="Guardian's First Name" type="text" name="guardianFName" formControlName="guardianFName">
+                  <input matInput placeholder="Guardian's First Name" type="text" name="guardianFName" formControlName="guardianFName" (change)="onChangePreference()">
                 </mat-form-field>
               </div>
 
               <div class="col-sm-3">
                 <mat-form-field class="example-full-width">
-                  <input matInput placeholder="Guardian's Middle Name" type="text" name="guardianMName" formControlName="guardianMName">
+                  <input matInput placeholder="Guardian's Middle Name" type="text" name="guardianMName" formControlName="guardianMName" (change)="onChangePreference()">
                 </mat-form-field>
               </div>
 
               <div class="col-sm-3">
                 <mat-form-field class="example-full-width">
-                  <input matInput placeholder="Guardian's Last Name" type="text" name="guardianLName" formControlName="guardianLName">
+                  <input matInput placeholder="Guardian's Last Name" type="text" name="guardianLName" formControlName="guardianLName" (change)="onChangePreference()">
                 </mat-form-field>
               </div>
 
               <div class="col-sm-3">
                 <mat-form-field class="example-full-width">
                   <input matInput placeholder="Father's Mobile Number" type="number" name="fatherMobileNo"
-                    formControlName="fatherMobileNo">
+                    formControlName="fatherMobileNo" (change)="onChangePreference()">
                 </mat-form-field>
               </div>
 
               <div class="col-sm-3">
                 <mat-form-field class="example-full-width">
                   <input matInput placeholder="Mother's Mobile Number" type="number" name="motherMobileNo"
-                    formControlName="motherMobileNo">
+                    formControlName="motherMobileNo" (change)="onChangePreference()">
                 </mat-form-field>
               </div>
 
               <div class="col-sm-3">
                 <mat-form-field class="example-full-width">
                   <input matInput placeholder="Guardian's Mobile Number" type="number" name="guardianMobileNo"
-                    formControlName="guardianMobileNo">
+                    formControlName="guardianMobileNo" (change)="onChangePreference()">
                 </mat-form-field>
               </div>
 
@@ -296,7 +307,7 @@
 
               <div class="col-sm-3">
                 <mat-form-field class="example-full-width">
-                  <mat-select placeholder="Medium of Instruction" name="mediumOfInstruction" formControlName="mediumOfInstruction">
+                  <mat-select placeholder="Medium of Instruction" name="mediumOfInstruction" formControlName="mediumOfInstruction" (change)="onChangePreference()">
                     <mat-option value="english">English</mat-option>
                     <mat-option value="hindi">Hindi</mat-option>
                     <mat-option value="bengali">Bengali</mat-option>
@@ -306,7 +317,8 @@
 
               <div class="col-sm-3">
                 <mat-form-field class="example-full-width">
-                  <input matInput placeholder="Admission Number" type="text" name="admissionNo" formControlName="admissionNo">
+                  <input matInput placeholder="Admission Number *" type="text" name="admissionNo" formControlName="admissionNo" (change)="onChangePreference()">
+                  <mat-error *ngIf="admissionNo.hasError('required')">Field is required.</mat-error>
                 </mat-form-field>
               </div>
 
@@ -314,7 +326,7 @@
               <div class="col-sm-3">
                 <mat-form-field class="example-full-width">
                   <input matInput [matDatepicker]="admissionDate" placeholder="Admission Date" name="admissionDate"
-                    formControlName="admissionDate">
+                    formControlName="admissionDate" (change)="onChangePreference()">
                   <mat-datepicker-toggle matSuffix [for]="admissionDate"></mat-datepicker-toggle>
                   <mat-datepicker #admissionDate></mat-datepicker>
                 </mat-form-field>
@@ -323,35 +335,38 @@
 
               <div class="col-sm-3">
                 <mat-form-field class="example-full-width">
-                  <mat-select placeholder="Stream/Group" name="streamID" formControlName="streamID">
+                  <mat-select placeholder="Stream/Group *" name="streamID" formControlName="streamID" (change)="onChangePreference()">
                     <!-- <ng-template ngFor="let stream of selectData.streamList"> -->
                     <mat-option *ngFor="let stream of streamData" value="{{stream.id}}">{{stream.name}}</mat-option>
                     <!-- </ng-template>                         -->
                     <!-- <mat-option value="2">Arts</mat-option>
                         <mat-option value="3">Commerce</mat-option> -->
                   </mat-select>
+                  <mat-error *ngIf="streamID.hasError('required')">Field is required.</mat-error>
                 </mat-form-field>
               </div>
 
               <div class="col-sm-3">
                 <mat-form-field class="example-full-width">
-                  <mat-select (change)="getSection($event)" placeholder="Class" name="classID" formControlName="classID">
+                  <mat-select (change)="getSection($event)" placeholder="Class *" name="classID" formControlName="classID" (change)="onChangePreference()">
                     <mat-option *ngFor="let class of classData" value="{{class.classID}}">{{class.className}}</mat-option>
                   </mat-select>
+                  <mat-error *ngIf="classID.hasError('required')">Field is required.</mat-error>
                 </mat-form-field>
               </div>
 
               <div class="col-sm-3">
                 <mat-form-field class="example-full-width">
-                  <mat-select placeholder="Section" name="sectionID" formControlName="sectionID">
+                  <mat-select placeholder="Section *" name="sectionID" formControlName="sectionID" (change)="onChangePreference()">
                     <mat-option *ngFor="let section of sectionData" value="{{section.sectionID}}">{{section.sectionName}}</mat-option>
                   </mat-select>
+                  <mat-error *ngIf="sectionID.hasError('required')">Field is required.</mat-error>
                 </mat-form-field>
               </div>
 
               <div class="col-sm-3">
                 <mat-form-field class="example-full-width">
-                  <mat-select placeholder="Fee Quota" name="feeQuota" formControlName="feeQuota">
+                  <mat-select placeholder="Fee Quota" name="feeQuota" formControlName="feeQuota" (change)="onChangePreference()">
                     <mat-option value="option 1">Option 1</mat-option>
                     <mat-option value="option 2">Option 2</mat-option>
                   </mat-select>
@@ -360,19 +375,21 @@
 
               <div class="col-sm-3">
                 <mat-form-field class="example-full-width">
-                  <mat-select placeholder="Bus Route" name="routeID" formControlName="routeID">
+                  <mat-select placeholder="Bus Route *" name="routeID" formControlName="routeID" (change)="onChangePreference()">
                     <mat-option *ngFor="let route of routeData" value="{{route.routeID}}">{{route.routeName}}</mat-option>
                   </mat-select>
+                  <mat-error *ngIf="routeID.hasError('required')">Field is required.</mat-error>
                 </mat-form-field>
               </div>
             </div>
 
 
             <div class="row">
+              <div class="col-md-12 mt-4">* fields are required.</div>
               <div class="col-md-12 mt-4">
                 <div class="form-group">
                   <button class="btn btn-success btn-lg" type="submit" [disabled]="disableRegisterBtn">Register</button>
-                  <input type="button" class="btn btn-primary btn-lg" (click)="resetForm()" value="Reset" />
+                  <input type="button" class="btn btn-primary btn-lg" (click)="resetForm()" value="Reset"/>
                 </div>
               </div>
             </div>
