--- a/src/app/layouts/app-sidebar/app-sidebar.component.html
+++ b/src/app/layouts/app-sidebar/app-sidebar.component.html
@@ -1,6 +1,7 @@
 <div id="sidebar-collapse">
 
   <ul class="nav nav-tabs nav-justified" id="nav-tab" role="tablist">
+
     <li class="nav-item">
       <a class="nav-link active" data-toggle="tab" aria-controls="menu1" href="#menu1" id="menu1-tab">
         <i class="fa fa-bookmark"></i> Tab One
@@ -12,6 +13,7 @@
         <i class="fa fa-bookmark"></i> Tab Two
       </a>
     </li>
+
   </ul>
 
   <div class="tab-content" id="nav-tabContent">
@@ -156,6 +158,8 @@
       </ul>
     </div>
 
+    
+
     <div id="menu2" class="tab-pane" role="tabpanel" aria-labelledby="menu2-tab"><br>
       <ul class="side-menu metismenu">
         <!-- <li>
@@ -166,7 +170,7 @@
 
         <!-- <li class="heading">FEATURES</li> -->
 
-        <li routerLinkActive="active">
+        <!-- <li routerLinkActive="active">
           <a href="javascript:;"><i class="sidebar-item-icon fa fa-edit"></i>
             <span class="nav-label">Fee Management</span><i class="fa fa-angle-right arrow"></i>
           </a>
@@ -209,7 +213,7 @@
           <a href="javascript:;"><i class="sidebar-item-icon fa fa-sitemap"></i>
             <span class="nav-label">Certificates Management</span><i class="fa fa-angle-right arrow"></i>
           </a>
-        </li>
+        </li> -->
       </ul>
     </div>
   </div>
